# Kaya-Suites

./: CONFIG.md  CONTRIBUTING.md  README.md  TODO.md  package.json  pnpm-lock.yaml
.claude/: CLAUDE.md
.claude/ee/: enterprise.md
apps/backend/: Cargo.toml  kaya.yaml
apps/backend/content/: a4462e47-6f92-44c6-ae82-b540f20b8209.md  d8c5decf-9b25-43fb-a6c5-e7b0badf44ad.md
apps/backend/crates/ee/kaya-postgres-storage/migrations/: 006_chat_citations.sql  007_token_usage.sql
apps/backend/crates/ee/kaya-postgres-storage/src/: lib.rs  session.rs
apps/backend/crates/ee/kaya-tenant/: Cargo.toml
apps/backend/crates/ee/kaya-tenant/src/: auth_adapter.rs  error.rs  lib.rs  password_auth.rs
apps/backend/crates/kaya-auth/: Cargo.toml
apps/backend/crates/kaya-auth/src/: auth_adapter.rs  error.rs  lib.rs  password_auth.rs
apps/backend/crates/kaya-core/: Cargo.toml
apps/backend/crates/kaya-core/examples/: agent_cli.rs
apps/backend/crates/kaya-core/src/: auth.rs  diff.rs  edit.rs  lib.rs  retrieval.rs  session.rs  storage.rs  token_counter.rs
apps/backend/crates/kaya-core/src/agent/: editor.rs  log.rs  mod.rs  orchestrator.rs  researcher.rs  summarizer.rs  tool.rs  turn_context.rs
apps/backend/crates/kaya-core/src/model_router/: anthropic.rs  config.rs  meter.rs  mod.rs  openai.rs  router.rs
apps/backend/crates/kaya-core/tests/: agent_e2e.rs  compile_test.rs
apps/backend/crates/kaya-core/tests/fail/: editor_with_read_tool.rs  editor_with_read_tool.stderr
apps/backend/crates/kaya-db/: Cargo.toml
apps/backend/crates/kaya-db/migrations/mysql/: 0001_baseline.sql
apps/backend/crates/kaya-db/migrations/postgres/: 0001_baseline.sql  0002_mcp_tokens_rollover.sql
apps/backend/crates/kaya-db/migrations/sqlite/: 0001_baseline.sql
apps/backend/crates/kaya-db/src/: lib.rs
apps/backend/crates/kaya-mcp/: Cargo.toml
apps/backend/crates/kaya-mcp/src/: lib.rs  pending.rs  preview.rs  registry.rs  service.rs
apps/backend/crates/kaya-mcp/tests/: integration.rs
apps/backend/crates/kaya-metering/: Cargo.toml
apps/backend/crates/kaya-metering/src/: aggregation.rs  caps.rs  circuit.rs  error.rs  events.rs  lib.rs  overage.rs  pricing.rs  rate_limit.rs  service.rs
apps/backend/crates/kaya-metering/tests/: metering_tests.rs
apps/backend/crates/kaya-oauth/: Cargo.toml
apps/backend/crates/kaya-oauth/src/: clients.rs  codes.rs  crypto.rs  lib.rs  model.rs  tokens.rs
apps/backend/crates/kaya-oauth/tests/: integration.rs
apps/backend/crates/kaya-postgres-storage/: Cargo.toml
apps/backend/crates/kaya-postgres-storage/src/: lib.rs  session.rs
apps/backend/crates/kaya-server/: Cargo.toml
apps/backend/crates/kaya-server/src/: error.rs  lib.rs  state.rs
apps/backend/crates/kaya-server/src/routes/: chat.rs  documents.rs  edits.rs  folders.rs  mod.rs  sessions.rs
apps/backend/crates/kaya-server/src/routes/oauth/: authorize.rs  consent.rs  discovery.rs  issuer.rs  mod.rs  pat.rs  register.rs  state.rs  token.rs
apps/backend/crates/kaya-server/tests/: oauth_http.rs
apps/backend/crates/kaya-storage/: Cargo.toml
apps/backend/crates/kaya-storage/migrations/: 0001_initial.sql  005_password_auth.sql  007_token_usage.sql  008_superadmin.sql  009_folders.sql
apps/backend/crates/kaya-storage/migrations/mysql/: 0001_initial.sql  0002_folder_sort_order.sql  0003_document_sort_order.sql
apps/backend/crates/kaya-storage/migrations/postgres/: 0002_folder_sort_order.sql  0003_document_sort_order.sql
apps/backend/crates/kaya-storage/migrations/sqlite/: 0001_initial.sql  0002_folder_sort_order.sql  0003_document_sort_order.sql
apps/backend/crates/kaya-storage/src/: backend.rs  document.rs  lib.rs  mysql.rs  postgres.rs  session.rs  sqlite.rs
apps/backend/crates/kaya-storage/src/session/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
apps/backend/crates/kaya-storage/tests/: compile_test.rs  integration.rs  mysql_integration.rs  postgres_integration.rs  sqlite_sqlx.rs
apps/backend/crates/kaya-storage/tests/fail/: no_user_context.rs  no_user_context.stderr
apps/backend/crates/kaya-tenant/: Cargo.toml
apps/backend/crates/kaya-tenant/src/: auth_adapter.rs  lib.rs  magic_link.rs  password_auth.rs
apps/web/: README.md  design.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx  theme.generated.css
apps/web/app/(ee)/: page.tsx
apps/web/app/(ee)/admin/: page.tsx
apps/web/app/(ee)/auth/signin/: page.tsx
apps/web/app/(ee)/auth/signup/: page.tsx
apps/web/app/(ee)/billing/subscribe/: page.tsx
apps/web/app/(ee)/billing/success/: page.tsx
apps/web/app/(ee)/dashboard/: page.tsx
apps/web/app/(ee)/pricing/: page.tsx
apps/web/app/(ee)/privacy/: page.tsx
apps/web/app/(ee)/terms/: page.tsx
apps/web/app/(shared)/: layout.tsx
apps/web/app/(shared)/admin/: page.tsx
apps/web/app/(shared)/documents/: context.ts  layout.tsx  page.tsx
apps/web/app/(shared)/settings/: page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/api/chat/: route.ts
apps/web/app/api/documents/: route.ts
apps/web/app/api/folders/: route.ts
apps/web/app/api/sessions/: route.ts
apps/web/app/api/usage/: route.ts
apps/web/components/shared/: AppNav.tsx  ChatInput.tsx  ChatLayout.tsx  ChatMessage.tsx  ChatPanel.tsx  DeleteReview.tsx  DiffReview.tsx  DocumentChatSidebar.tsx  DocumentEditor.tsx  DocumentList.tsx  DocumentPanel.tsx  FolderCreateReview.tsx  FolderTree.tsx  KayaMarkdownEditor.tsx  MDXEditorClient.tsx  OnboardingChecklist.tsx  SessionRail.tsx
apps/web/components/shared/markdown/: MarkdownContent.tsx  MermaidDiagram.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  field.tsx  input.tsx  theme-provider.tsx  theme-toggle.tsx
apps/web/hooks/: useOnboarding.ts  useResizable.ts
apps/web/lib/: api.ts  bff.ts
apps/web/lib/markdown/: model.test.ts  model.ts
apps/web/scripts/: build-theme.mjs
apps/web/types/: chat.ts
docs/: README.md  architecture.md  auth-adapter.md  building.md  license.md  llm-provider.md  mcp.md  packages.md  storage-adapter.md
docs/agent/: architecture.md
scripts/: embed-all-documents.sh
(+37 files in other folders)
