[package]
name    = "kaya-db"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Universal database migrations for Kaya Suites (Apache 2.0)"

[dependencies]
sqlx  = { version = "0.8", features = ["any", "postgres", "sqlite", "mysql", "runtime-tokio", "chrono"] }
anyhow = "1"
tracing = "0.1"
