[package]
name    = "kaya-metering"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Token usage metering, spend caps, and rate limits for Kaya Suites"

[dependencies]
kaya-core  = { path = "../kaya-core" }
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
tokio      = { workspace = true }
tracing    = "0.1"

# Database — AnyPool supports Postgres, SQLite, and MySQL
sqlx = { version = "0.8", features = [
    "any", "postgres", "sqlite", "mysql", "runtime-tokio", "chrono",
] }

[dev-dependencies]
tokio = { workspace = true }
