[package]
name    = "kaya-storage"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "SQLite, MySQL, and Postgres storage adapters for Kaya Suites (Apache 2.0)"

[features]
postgres = ["sqlx/postgres", "dep:pgvector"]

[dependencies]
kaya-core   = { path = "../kaya-core" }
async-trait = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
tokio       = { workspace = true }
anyhow      = { workspace = true }
sqlx        = { version = "0.8", features = ["sqlite", "mysql", "runtime-tokio", "uuid", "chrono", "migrate", "json"] }
serde_yaml  = "0.9"
sha2        = "0.10"
pgvector    = { version = "0.4", features = ["sqlx"], optional = true }

[dev-dependencies]
tempfile    = "3"
futures     = { workspace = true }
async-trait = { workspace = true }
trybuild    = { workspace = true }
