[package]
name        = "kaya-tenant"
version     = "0.1.0"
edition     = "2024"
license     = "Apache-2.0"
description = "Password-based auth and multi-tenant context for Kaya Suites"

[dependencies]
kaya-core   = { path = "../kaya-core" }
async-trait = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }

# Auth session management
axum-login                = "0.17"
tower-sessions            = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres", "sqlite"] }

# Database — AnyPool supports all three backends
sqlx = { version = "0.8", features = [
    "any", "postgres", "sqlite", "mysql", "runtime-tokio", "chrono",
] }

# Password hashing
argon2 = { version = "0.5", features = ["std"] }

# Observability
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true }
sqlx  = { version = "0.8", features = [
    "any", "postgres", "sqlite", "mysql", "runtime-tokio", "chrono",
] }
